Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30964

MAX_SEL_ARGS memory exhaustion is not visible in the optimizer trace

Details

    Description

      It is possible to construct queries that hit the MAX_SEL_ARG=16000 limit in the range optimizer. Unfortunately, this limit is only visible in debugger.

      It is trivial print hitting this limit into the optimizer trace.

      Attachments

        Activity

          People

            psergei Sergei Petrunia
            psergei Sergei Petrunia
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.