MDEV-30964: MAX_SEL_ARG memory exhaustion is not visible in the optimizer trace

Add printing